--- a/pagina_planos.html
+++ b/pagina_planos.html
@@ -17,7 +17,7 @@
       <span>Academia Black and White</span></a>
   </div>
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html">Início</a>
     <a href="pagina_planos.html" class="active">Planos</a>
     <a href="pagina3.html">Atividades</a>
     <a href="pagina4.html">Ambiente</a>
